{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 637,
  "lineage": "137da6b0-34cc-11a0-066a-f53ab6764a7c",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "web_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/loadBalancers/scrum-squad-capstone-web-lb/frontendIPConfigurations/web-lb-publicip-1",
                "name": "web-lb-publicip-1",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/publicIPAddresses/scrum-squad-capstone-lbpublicip"
              }
            ],
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/loadBalancers/scrum-squad-capstone-web-lb",
            "location": "centralus",
            "name": "scrum-squad-capstone-web-lb",
            "resource_group_name": "scrum-squad-capstone",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.web_lbpublicip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/loadBalancers/wordpress-lb/frontendIPConfigurations/PublicIPAddress",
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/publicIPAddresses/wordpress-public-ip"
              }
            ],
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/loadBalancers/wordpress-lb",
            "location": "centralus",
            "name": "wordpress-lb",
            "resource_group_name": "scrum-squad-capstone",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.wordpress",
            "azurerm_resource_group.rg",
            "random_string.fqdn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "bpepool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/loadBalancers/wordpress-lb/backendAddressPools/BackEndAddressPool",
            "loadbalancer_id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/loadBalancers/wordpress-lb",
            "name": "BackEndAddressPool"
          },
          "dependencies": [
            "azurerm_lb.wordpress",
            "azurerm_public_ip.wordpress",
            "azurerm_resource_group.rg",
            "random_string.fqdn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "web_lb_backend_address_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/loadBalancers/scrum-squad-capstone-web-lb/backendAddressPools/web-backend",
            "loadbalancer_id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/loadBalancers/scrum-squad-capstone-web-lb",
            "name": "web-backend"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_public_ip.web_lbpublicip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "web_lb_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/loadBalancers/scrum-squad-capstone-web-lb/probes/tcp-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/loadBalancers/scrum-squad-capstone-web-lb",
            "name": "tcp-probe",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_public_ip.web_lbpublicip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/loadBalancers/wordpress-lb/probes/ssh-running-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/loadBalancers/wordpress-lb",
            "name": "ssh-running-probe",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.wordpress",
            "azurerm_public_ip.wordpress",
            "azurerm_resource_group.rg",
            "random_string.fqdn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lbnatrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/loadBalancers/wordpress-lb/backendAddressPools/BackEndAddressPool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/loadBalancers/wordpress-lb/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/loadBalancers/wordpress-lb/loadBalancingRules/http",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/loadBalancers/wordpress-lb",
            "name": "http",
            "probe_id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/loadBalancers/wordpress-lb/probes/ssh-running-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.wordpress",
            "azurerm_lb_backend_address_pool.bpepool",
            "azurerm_lb_probe.wordpress",
            "azurerm_public_ip.wordpress",
            "azurerm_resource_group.rg",
            "random_string.fqdn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "web_lb_rule_app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/loadBalancers/scrum-squad-capstone-web-lb/backendAddressPools/web-backend"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/loadBalancers/scrum-squad-capstone-web-lb/frontendIPConfigurations/web-lb-publicip-1",
            "frontend_ip_configuration_name": "web-lb-publicip-1",
            "frontend_port": 80,
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/loadBalancers/scrum-squad-capstone-web-lb/loadBalancingRules/web-app1-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/loadBalancers/scrum-squad-capstone-web-lb",
            "name": "web-app1-rule",
            "probe_id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/loadBalancers/scrum-squad-capstone-web-lb/probes/tcp-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_lb_backend_address_pool.web_lb_backend_address_pool",
            "azurerm_lb_probe.web_lb_probe",
            "azurerm_public_ip.web_lbpublicip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "bastion_host_linuxvm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/networkInterfaces/scrum-squad-capstone-bastion-host-linuxvm-nic",
            "internal_domain_name_suffix": "r5dhaabmwmbe5b5cxllj3k4bzf.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "bastion-host-ip-1",
                "primary": true,
                "private_ip_address": "10.1.100.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/publicIPAddresses/scrum-squad-capstone-bastion-host-publicip",
                "subnet_id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/virtualNetworks/scrum-squad-capstone-vnet/subnets/scrum-squad-capstone-vnet-bastionsubnet"
              }
            ],
            "location": "centralus",
            "name": "scrum-squad-capstone-bastion-host-linuxvm-nic",
            "private_ip_address": "10.1.100.4",
            "private_ip_addresses": [
              "10.1.100.4"
            ],
            "resource_group_name": "scrum-squad-capstone"
          },
          "dependencies": [
            "azurerm_public_ip.bastion_host_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_linuxvm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/networkInterfaces/scrum-squad-capstone-web-linuxvm-nic",
            "internal_domain_name_suffix": "r5dhaabmwmbe5b5cxllj3k4bzf.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-linuxvm-ip-1",
                "primary": true,
                "private_ip_address": "10.1.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/publicIPAddresses/scrum-squad-capstone-web-linuxvm-publicip",
                "subnet_id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/virtualNetworks/scrum-squad-capstone-vnet/subnets/scrum-squad-capstone-vnet-websubnet"
              }
            ],
            "location": "centralus",
            "name": "scrum-squad-capstone-web-linuxvm-nic",
            "private_ip_address": "10.1.1.4",
            "private_ip_addresses": [
              "10.1.1.4"
            ],
            "resource_group_name": "scrum-squad-capstone"
          },
          "dependencies": [
            "azurerm_public_ip.web_linuxvm_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "web_nic_lb_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/loadBalancers/scrum-squad-capstone-web-lb/backendAddressPools/web-backend",
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/networkInterfaces/scrum-squad-capstone-web-linuxvm-nic/ipConfigurations/web-linuxvm-ip-1|/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/loadBalancers/scrum-squad-capstone-web-lb/backendAddressPools/web-backend",
            "ip_configuration_name": "web-linuxvm-ip-1",
            "network_interface_id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/networkInterfaces/scrum-squad-capstone-web-linuxvm-nic"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_lb_backend_address_pool.web_lb_backend_address_pool",
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_public_ip.web_lbpublicip",
            "azurerm_public_ip.web_linuxvm_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "web_vmnic_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/networkInterfaces/scrum-squad-capstone-web-linuxvm-nic|/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/networkSecurityGroups/scrum-squad-capstone-web-linuxvm-nic-nsg",
            "network_interface_id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/networkInterfaces/scrum-squad-capstone-web-linuxvm-nic",
            "network_security_group_id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/networkSecurityGroups/scrum-squad-capstone-web-linuxvm-nic-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_network_security_group.web_vmnic_nsg",
            "azurerm_network_security_rule.web_vmnic_nsg_rule_inbound",
            "azurerm_public_ip.web_linuxvm_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/networkSecurityGroups/scrum-squad-capstone-vnet-appsubnet-nsg",
            "location": "centralus",
            "name": "scrum-squad-capstone-vnet-appsubnet-nsg",
            "resource_group_name": "scrum-squad-capstone",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "bastion_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/networkSecurityGroups/scrum-squad-capstone-vnet-bastionsubnet-nsg",
            "location": "centralus",
            "name": "scrum-squad-capstone-vnet-bastionsubnet-nsg",
            "resource_group_name": "scrum-squad-capstone",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/networkSecurityGroups/scrum-squad-capstone-vnet-dbsubnet-nsg",
            "location": "centralus",
            "name": "scrum-squad-capstone-vnet-dbsubnet-nsg",
            "resource_group_name": "scrum-squad-capstone",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/networkSecurityGroups/scrum-squad-capstone-vnet-websubnet-nsg",
            "location": "centralus",
            "name": "scrum-squad-capstone-vnet-websubnet-nsg",
            "resource_group_name": "scrum-squad-capstone",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_vmnic_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/networkSecurityGroups/scrum-squad-capstone-web-linuxvm-nic-nsg",
            "location": "centralus",
            "name": "scrum-squad-capstone-web-linuxvm-nic-nsg",
            "resource_group_name": "scrum-squad-capstone",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_public_ip.web_linuxvm_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "app_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/networkSecurityGroups/scrum-squad-capstone-vnet-appsubnet-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "scrum-squad-capstone-vnet-appsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "scrum-squad-capstone",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/networkSecurityGroups/scrum-squad-capstone-vnet-appsubnet-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "scrum-squad-capstone-vnet-appsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "scrum-squad-capstone",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8080",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/networkSecurityGroups/scrum-squad-capstone-vnet-appsubnet-nsg/securityRules/Rule-Port-8080",
            "name": "Rule-Port-8080",
            "network_security_group_name": "scrum-squad-capstone-vnet-appsubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "scrum-squad-capstone",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "130",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/networkSecurityGroups/scrum-squad-capstone-vnet-appsubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "scrum-squad-capstone-vnet-appsubnet-nsg",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "scrum-squad-capstone",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "bastion_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/networkSecurityGroups/scrum-squad-capstone-vnet-bastionsubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "scrum-squad-capstone-vnet-bastionsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "scrum-squad-capstone",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/networkSecurityGroups/scrum-squad-capstone-vnet-bastionsubnet-nsg/securityRules/Rule-Port-3389",
            "name": "Rule-Port-3389",
            "network_security_group_name": "scrum-squad-capstone-vnet-bastionsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "scrum-squad-capstone",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "db_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3306",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/networkSecurityGroups/scrum-squad-capstone-vnet-dbsubnet-nsg/securityRules/Rule-Port-3306",
            "name": "Rule-Port-3306",
            "network_security_group_name": "scrum-squad-capstone-vnet-dbsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "scrum-squad-capstone",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "1433",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/networkSecurityGroups/scrum-squad-capstone-vnet-dbsubnet-nsg/securityRules/Rule-Port-1433",
            "name": "Rule-Port-1433",
            "network_security_group_name": "scrum-squad-capstone-vnet-dbsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "scrum-squad-capstone",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "5432",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/networkSecurityGroups/scrum-squad-capstone-vnet-dbsubnet-nsg/securityRules/Rule-Port-5432",
            "name": "Rule-Port-5432",
            "network_security_group_name": "scrum-squad-capstone-vnet-dbsubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "scrum-squad-capstone",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/networkSecurityGroups/scrum-squad-capstone-vnet-websubnet-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "scrum-squad-capstone-vnet-websubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "scrum-squad-capstone",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/networkSecurityGroups/scrum-squad-capstone-vnet-websubnet-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "scrum-squad-capstone-vnet-websubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "scrum-squad-capstone",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/networkSecurityGroups/scrum-squad-capstone-vnet-websubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "scrum-squad-capstone-vnet-websubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "scrum-squad-capstone",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_vmnic_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/networkSecurityGroups/scrum-squad-capstone-web-linuxvm-nic-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "scrum-squad-capstone-web-linuxvm-nic-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "scrum-squad-capstone",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_network_security_group.web_vmnic_nsg",
            "azurerm_public_ip.web_linuxvm_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/networkSecurityGroups/scrum-squad-capstone-web-linuxvm-nic-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "scrum-squad-capstone-web-linuxvm-nic-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "scrum-squad-capstone",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_network_security_group.web_vmnic_nsg",
            "azurerm_public_ip.web_linuxvm_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/networkSecurityGroups/scrum-squad-capstone-web-linuxvm-nic-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "scrum-squad-capstone-web-linuxvm-nic-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "scrum-squad-capstone",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_network_security_group.web_vmnic_nsg",
            "azurerm_public_ip.web_linuxvm_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_host_publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/publicIPAddresses/scrum-squad-capstone-bastion-host-publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.29.82.218",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "scrum-squad-capstone-bastion-host-publicip",
            "resource_group_name": "scrum-squad-capstone",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_service_publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/publicIPAddresses/scrum-squad-capstone-bastion-service-publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.29.82.229",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "scrum-squad-capstone-bastion-service-publicip",
            "resource_group_name": "scrum-squad-capstone",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_lbpublicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/publicIPAddresses/scrum-squad-capstone-lbpublicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.29.82.206",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "scrum-squad-capstone-lbpublicip",
            "resource_group_name": "scrum-squad-capstone",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "owners": "hr"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_linuxvm_publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/publicIPAddresses/scrum-squad-capstone-web-linuxvm-publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.29.82.216",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "scrum-squad-capstone-web-linuxvm-publicip",
            "resource_group_name": "scrum-squad-capstone",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "cxxfyx",
            "fqdn": "cxxfyx.centralus.cloudapp.azure.com",
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/publicIPAddresses/wordpress-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.29.82.231",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "wordpress-public-ip",
            "resource_group_name": "scrum-squad-capstone",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.fqdn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "appsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.11.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/virtualNetworks/scrum-squad-capstone-vnet/subnets/scrum-squad-capstone-vnet-appsubnet",
            "name": "scrum-squad-capstone-vnet-appsubnet",
            "resource_group_name": "scrum-squad-capstone",
            "virtual_network_name": "scrum-squad-capstone-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion_service_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.101.0/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/virtualNetworks/scrum-squad-capstone-vnet/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "resource_group_name": "scrum-squad-capstone",
            "virtual_network_name": "scrum-squad-capstone-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastionsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.100.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/virtualNetworks/scrum-squad-capstone-vnet/subnets/scrum-squad-capstone-vnet-bastionsubnet",
            "name": "scrum-squad-capstone-vnet-bastionsubnet",
            "resource_group_name": "scrum-squad-capstone",
            "virtual_network_name": "scrum-squad-capstone-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dbsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.21.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/virtualNetworks/scrum-squad-capstone-vnet/subnets/scrum-squad-capstone-vnet-dbsubnet",
            "name": "scrum-squad-capstone-vnet-dbsubnet",
            "resource_group_name": "scrum-squad-capstone",
            "service_endpoints": [
              "Microsoft.Sql"
            ],
            "virtual_network_name": "scrum-squad-capstone-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "websubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/virtualNetworks/scrum-squad-capstone-vnet/subnets/scrum-squad-capstone-vnet-websubnet",
            "name": "scrum-squad-capstone-vnet-websubnet",
            "resource_group_name": "scrum-squad-capstone",
            "service_endpoints": [
              "Microsoft.Sql"
            ],
            "virtual_network_name": "scrum-squad-capstone-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/virtualNetworks/scrum-squad-capstone-vnet/subnets/wordpress-subnet",
            "name": "wordpress-subnet",
            "resource_group_name": "scrum-squad-capstone",
            "virtual_network_name": "scrum-squad-capstone-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/virtualNetworks/scrum-squad-capstone-vnet/subnets/scrum-squad-capstone-vnet-appsubnet",
            "network_security_group_id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/networkSecurityGroups/scrum-squad-capstone-vnet-appsubnet-nsg",
            "subnet_id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/virtualNetworks/scrum-squad-capstone-vnet/subnets/scrum-squad-capstone-vnet-appsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_network_security_rule.app_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "bastion_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/virtualNetworks/scrum-squad-capstone-vnet/subnets/scrum-squad-capstone-vnet-bastionsubnet",
            "network_security_group_id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/networkSecurityGroups/scrum-squad-capstone-vnet-bastionsubnet-nsg",
            "subnet_id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/virtualNetworks/scrum-squad-capstone-vnet/subnets/scrum-squad-capstone-vnet-bastionsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_network_security_rule.bastion_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/virtualNetworks/scrum-squad-capstone-vnet/subnets/scrum-squad-capstone-vnet-dbsubnet",
            "network_security_group_id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/networkSecurityGroups/scrum-squad-capstone-vnet-dbsubnet-nsg",
            "subnet_id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/virtualNetworks/scrum-squad-capstone-vnet/subnets/scrum-squad-capstone-vnet-dbsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_network_security_rule.db_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/virtualNetworks/scrum-squad-capstone-vnet/subnets/scrum-squad-capstone-vnet-websubnet",
            "network_security_group_id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/networkSecurityGroups/scrum-squad-capstone-vnet-websubnet-nsg",
            "subnet_id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/virtualNetworks/scrum-squad-capstone-vnet/subnets/scrum-squad-capstone-vnet-websubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_network_security_rule.web_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "0070c68f-b32c-4f02-87e2-bad69eabc1cd",
            "id": "/subscriptions/a7476f0d-8661-459b-ae96-986c28263192/resourceGroups/scrum-squad-capstone/providers/Microsoft.Network/virtualNetworks/scrum-squad-capstone-vnet",
            "location": "centralus",
            "name": "scrum-squad-capstone-vnet",
            "resource_group_name": "scrum-squad-capstone",
            "tags": {
              "owners": "hr"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}